2001-02-21  Tom Tromey  <tromey@redhat.com>

	* automake.in (handle_dist): Do nothing in Cygnus mode.

2001-02-21  Pavel Roskin  <proski@gnu.org>

	* header-vars.am: Remove tabs before variable definitions.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* tests/distdir.test (EXTRA_DIST): Use a finer pattern to avoid
	false diagnostics.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&dist_cmp, &target_cmp): Be sure to return a
	numeric value as required by Perl 5.6.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* dist-vars.am: Remove, merge into...
	* distdir.am: this.
	* automake.in (dirname, basename, backname): Move at the top of
	the file so that prototypes are checked,
	Use them without `&'.
	(&handle_dist): Adjust.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&check_ambiguous_conditional, &read_main_am_file):
	Use a uniform naming scheme.
	(&quote_cond_val, &unquote_cond_val): Delete, dead code.
	(&read_am_file): Fix conditioned definition of backslash continued
	items.

2001-02-21  Akim Demaille  <akim@epita.fr>

	Change the handling of conditionals: instead of using an ad-hoc
	encoding to store a hash in a string, use hashes.

	* automake.in (&conditional_dump): New.
	(&check_ambiguous_conditional, &variable_defined)
	(&variable_conditions_sub, &variable_value_as_list_worker)
	(&define_variable, read_am_file, &read_main_am_file): Be sure to
	handle `$conditional{$vars}' as a hash instead of a plain string.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&conditional_true_when): Modernize, simplify.
	Warning: `$comp' is now private (my), while it used to be
	`inherited' from a `local' elsewhere in the code.  AFAICT it was
	wrong, but some dirty side effect might show up.
	(&conditionals_true_when): New.
	(&variable_conditions_sub, &variable_conditions_reduce): Use it.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* automake.in ($top_builddir): Remove, used in one place.
	(&define_standard_variables): Adjust.