@@ -12,4 +12,8 @@ END
 $AUTOMAKE || exit 1
 
 grep '\$(mkinstalldirs).*\.' Makefile.in && exit 1
-grep '\$(mkinstalldirs).*foo' Makefile.in
+grep '\$(mkinstalldirs).*foo' Makefile.in || exit 1
+
+# Check to make sure `foo' isn't made in build directory.
+grep 'mkinstalldirs.*foo.*foo' Makefile.in && exit 1
+exit 0
