@@ -1,5 +1,8 @@
 2001-02-21  Tom Tromey  <tromey@redhat.com>
 
+	* tests/distdir.test: Check to make sure directory isn't made in
+	build directory.
+
 	* automake.in (handle_dist): Do nothing in Cygnus mode.
 
 2001-02-21  Pavel Roskin  <proski@gnu.org>
